--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,15 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@modules/*":[
+        "src/app/modules/*"
+      ],
+      "@shared/*":[
+        "src/app/shared/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
