--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "angular-fusioncharts": "^3.2.0",
+    "fusioncharts": "^3.18.0",
     "ng-zorro-antd": "^13.0.1",
     "ngx-cookie-service": "^13.1.2",
     "rxjs": "~7.5.0",
