--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fusioncharts": "^3.18.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "moment": "^2.29.3",
     "ng-zorro-antd": "^13.0.1",
     "ngx-cookie-service": "^13.1.2",
     "ngx-spinner": "^13.1.1",
@@ -36,7 +37,7 @@
     "@angular/cli": "~13.2.2",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.50",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
