--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-fusioncharts": "^3.2.0",
     "bootstrap": "^5.1.3",
     "bootstrap-css-only": "^4.4.1",
+    "chart.js": "^4.0.1",
     "fusioncharts": "^3.18.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
